--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,11 @@
 body {
   background: rgb(249, 250, 251);
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  background: rgb(249, 250, 251);
+}
